--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-  <div id="app">{{ message }}</div>
+  <div id="app"></div>
 
-  <script src="app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
